{
    "name": "Object Eclipising",
    "maps": [
        {
            "name": "MeshControls",
            "id": "d075ce7f-aa7e-42fc-acbc-c20d13ae9a13",
            "actions": [
                {
                    "name": "VertexMode",
                    "type": "Button",
                    "id": "07f395fe-8b2b-4b11-8e1c-0d0cbe03bc88",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "EdgeMode",
                    "type": "Button",
                    "id": "eba63fc0-96c5-4699-975d-caa78fa06fce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TriangleMode",
                    "type": "Button",
                    "id": "4f53a53a-2cda-4cc8-a139-873b49bd37d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ObjectMode",
                    "type": "Button",
                    "id": "1d1cd43e-a42d-4154-8195-e52dc778ab7c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "ca9c3884-d8c5-4436-bc17-2de13b2f74b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "VertexExtrude",
                    "type": "Button",
                    "id": "95c6e818-6f6d-40df-9df5-e72671a65d6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "NormalExtrude",
                    "type": "Button",
                    "id": "4f20c38f-fc2d-44dc-8de3-30d7e38430c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "TriangleFromVerts",
                    "type": "Button",
                    "id": "2bdaf2bf-0382-4899-a832-e43ab6bdca48",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Delete",
                    "type": "Button",
                    "id": "f9207091-e3db-4275-9e9b-b2f720238f9e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "ModifierCtrl",
                    "type": "Button",
                    "id": "8503eeb0-6e37-4523-b4cc-6a587ef9cfe3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c3f82a39-fd19-4dc6-a8ff-cdad7d2b887c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "VertexMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "704af207-ff61-4df1-bf2b-0883d3fc0f4c",
                    "path": "<Keyboard>/2",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "EdgeMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "20fd57d9-43be-4e1b-aa9d-f556682e1b65",
                    "path": "<Keyboard>/3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "TriangleMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "795fa80d-1366-46a2-a0a0-dab018ffc871",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8727fe32-d5f1-43ad-b4c4-a43f1ec87afb",
                    "path": "<Keyboard>/v",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "VertexExtrude",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90845c06-879d-4a3d-bb8a-19d2214aa9d7",
                    "path": "<Keyboard>/e",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "NormalExtrude",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "112e9a8f-820e-4c72-b07b-1418d12369d4",
                    "path": "<Keyboard>/t",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "TriangleFromVerts",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dadfec1b-6580-4a20-af3a-a2633d9370b0",
                    "path": "<Keyboard>/delete",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Delete",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ed02904-1654-48cf-8be6-c02445e5c11d",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "ModifierCtrl",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ab1ae7de-42d4-48d7-818e-78fc8a0acb95",
                    "path": "<Keyboard>/4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "ObjectMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Joystick",
            "bindingGroup": "Joystick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}